Added license on each sorce code file.

--- a/server/templates/author.html
+++ b/server/templates/author.html
@@ -59,7 +59,7 @@
         and answer site for Ubuntu users. Built over
         <a href="http://code.google.com/intl/es-ES/appengine/">Google app engine</a>
         (python + memcahe + django + GQL)</li>
-        <li><a href="http://www.pystream.com">Pystream</a>: this project ;-)</li>
+        <li><a href="http://github.com/NeoRazorX/pystream">Pystream</a>: this project ;-)</li>
         <ul>
             <li>Server: Built over <a href="http://code.google.com/intl/es-ES/appengine/">Google app engine</a>
             (python + memcahe + django + GQL)</li>
