--- a/server/templates/new.html
+++ b/server/templates/new.html
@@ -48,24 +48,30 @@
 <div class="section">
     <a name="client"></a>
     <div class="title">Where can I get the pystream client?</div>
-    Pystream is in alpha state, so only a minimal Linux client is ready,
-    for testing purpose only.
+    Pystream is in alpha state!
+    <ul>
+        <li>Only Linux version have <a href="http://en.wikipedia.org/wiki/Universal_Plug_and_Play">UPnP</a>
+        support, so you will need to manually open a TCP port in Windows/Mac version.</li>
+        <li>Windows and Mac versions are untested, so please <a href="/report?link=/new">report</a> me any issue.</li>
+        <li>Source code <a href="http://github.com/NeoRazorX/pystream">here</a>.</li>
+    </ul>
+    <a href="/report?link=/new">Report</a> any issue you have.
     <table align="center">
     <tr>
         <td align="center">
-            <a href="#" onclick="this_is_alpha()"><img src="/img/windows.png"/></a>
+            <a href="/client/pystream-win32-client.exe" onclick="this_is_alpha()"><img src="/img/windows.png"/></a>
             <br/>
-            <a href="#" onclick="this_is_alpha()">Windows</a>
+            <a href="/client/pystream-win32-client.exe" onclick="this_is_alpha()">Windows</a>
         </td>
         <td align="center">
-            <a href="/client/pystream_linux_client.tar.bz2"><img src="/img/linux.png"/></a>
+            <a href="/client/pystream-unix-client.tar.gz"><img src="/img/linux.png"/></a>
             <br/>
-            <a href="/client/pystream_linux_client.tar.bz2">Linux</a>
+            <a href="/client/pystream-unix-client.tar.gz">Linux</a>
         </td>
         <td align="center">
-            <a href="#" onclick="this_is_alpha()"><img src="/img/mac.png"/></a>
+            <a href="/client/pystream-unix-client.tar.gz" onclick="this_is_alpha()"><img src="/img/mac.png"/></a>
             <br/>
-            <a href="#" onclick="this_is_alpha()">Mac</a>
+            <a href="/client/pystream-unix-client.tar.gz" onclick="this_is_alpha()">Mac</a>
         </td>
     </tr>
     </table>
