--- a/server/templates/new.html
+++ b/server/templates/new.html
@@ -50,29 +50,26 @@
     <div class="title">Where can I get the pystream client?</div>
     Pystream is in alpha state!
     <ul>
-        <li>Only Linux version have <a href="http://en.wikipedia.org/wiki/Universal_Plug_and_Play">UPnP</a>
+        <li>Only Linux version have <a href="http://en.wikipedia.org/wiki/Universal_Plug_and_Play" target="_Blank">UPnP</a>
         support, so you will need to manually open a TCP port in Windows/Mac version.</li>
         <li>Windows and Mac versions are untested, so please <a href="/report?link=/new">report</a> me any issue.</li>
-        <li>Source code <a href="http://github.com/NeoRazorX/pystream">here</a>.</li>
+        <li>Source code <a href="http://github.com/NeoRazorX/pystream" target="_Blank">here</a>.</li>
     </ul>
     <a href="/report?link=/new">Report</a> any issue you have.
     <table align="center">
     <tr>
-        <td align="center">
-            <a href="/client/pystream-win32-client.exe" onclick="this_is_alpha()"><img src="/img/windows.png"/></a>
-            <br/>
-            <a href="/client/pystream-win32-client.exe" onclick="this_is_alpha()">Windows</a>
+        <td align="center"><a href="https://github.com/downloads/NeoRazorX/pystream/pystream-win32-client.exe" target="_Blank" onclick="this_is_alpha()"><img src="/img/windows.png"/></a></td>
+        <td align="center"><a href="/client/pystream-unix-client.tar.gz"><img src="/img/linux.png"/></a></td>
+        <td align="center"><a href="/client/pystream-unix-client.tar.gz" onclick="this_is_alpha()"><img src="/img/mac.png"/></a></td>
+    </tr>
+    <tr>
+        <td align="center" valign="top">
+            <b>Windows</b><br/>
+            <a href="https://github.com/downloads/NeoRazorX/pystream/pystream-win32-client.exe" target="_Blank" onclick="this_is_alpha()">mirror 1</a><br/>
+            <a href="http://www.megaupload.com/?d=LQKI7UFH" target="_Blank" onclick="this_is_alpha()">mirror 2</a>
         </td>
-        <td align="center">
-            <a href="/client/pystream-unix-client.tar.gz"><img src="/img/linux.png"/></a>
-            <br/>
-            <a href="/client/pystream-unix-client.tar.gz">Linux</a>
-        </td>
-        <td align="center">
-            <a href="/client/pystream-unix-client.tar.gz" onclick="this_is_alpha()"><img src="/img/mac.png"/></a>
-            <br/>
-            <a href="/client/pystream-unix-client.tar.gz" onclick="this_is_alpha()">Mac</a>
-        </td>
+        <td align="center" valign="top"><a href="/client/pystream-unix-client.tar.gz">Linux</a></td>
+        <td align="center" valign="top"><a href="/client/pystream-unix-client.tar.gz" onclick="this_is_alpha()">Mac</a></td>
     </tr>
     </table>
 </div>
