Clients: - small improvements. - new setup file, needed for py2exe.
Server:
- Quick and dirty translation filter for django. Needs brainstorming.
- minor bugfixes.

--- a/server/css/web.css
+++ b/server/css/web.css
@@ -27,6 +27,11 @@ img {
     border-width: 0;
 }
 
+img.preview {
+    margin: 20px;
+    border: 1px outset #191919;
+}
+
 textarea {
     width: 99%;
     border: 1px solid #191919;
