--- a/server/templates/footer.html
+++ b/server/templates/footer.html
@@ -1,5 +1,5 @@
 <div class="footer">
-    <a href="mailto:admin@pystream.com">Contact</a> |
+    <a href="mailto:admin@pystream.com">{{ lang|translation:5 }}</a> |
     Copyright © 2011 by <a href="/author" title="pystream's author">NeoRazorX</a>.
 </div>
 </body>
