--- a/server/templates/report.html
+++ b/server/templates/report.html
@@ -8,7 +8,7 @@
         <input type="hidden" name="link" value="http://www.pystream.com{{ link }}"/>
         <textarea name="text" rows="6" cols="60">Explain your issue here.</textarea>
         <br/>{{ captcha|safe }}
-        <input type="submit" value="send"/>
+        <input type="submit" value="{{ lang|translation:52 }}"/>
     </form>
 </div>
 
