--- a/server/templates/main.html
+++ b/server/templates/main.html
@@ -17,7 +17,7 @@
     </tr>
     </table>
     </td>
-    <td align="right"><a href="/report?link=/">{{ lang|translation:6 }}</a></td>
+    <td align="right"><a href="/report?link=/">{{ lang|translation:'report' }}</a></td>
 </tr>
 </table>
 
@@ -50,7 +50,7 @@
 <div class="search">
     <form name="search" action="/search" method="get">
         <input class="search_box" type="text" name="query" value=""/>
-        <input type="submit" value="{{ lang|translation:2 }}"/>
+        <input type="submit" value="{{ lang|translation:'search' }}"/>
     </form>
 </div>
 
@@ -69,13 +69,13 @@
 </tr>
 <tr>
     <td align="center" valign="top">
-        <a href="/new">{{ lang|translation:7 }}</a>:<br/>
-        {{ lang|translation:9 }}.<br/>
-        {{ lang|translation:10 }} <a href="/new#lanparties">{{ lang|translation:11 }}</a>!
+        <a href="/new">{{ lang|translation:'newstream' }}</a>:<br/>
+        {{ lang|translation:'newstream1' }}.<br/>
+        {{ lang|translation:'newstream2' }} <a href="/new#lanparties">{{ lang|translation:'lanparties' }}</a>!
     </td>
     <td align="center" valign="top">
-        <a href="/random">{{ lang|translation:8 }}</a>:<br/>
-        {{ lang|translation:12 }}
+        <a href="/random">{{ lang|translation:'randstream' }}</a>:<br/>
+        {{ lang|translation:'randstream1' }}
     </td>
 </tr>
 </table>
