--- a/server/templates/report.html
+++ b/server/templates/report.html
@@ -3,12 +3,12 @@
 <div class="body">
 
 <div class="section">
-    <div class="title">Reporting issues:</div>
+    <div class="title">{{ lang|translation:'reportingi' }}:</div>
     <form name="report" action="/report" method="post">
         <input type="hidden" name="link" value="http://www.pystream.com{{ link }}"/>
-        <textarea name="text" rows="6" cols="60">Explain your issue here.</textarea>
+        <textarea name="text" rows="6" cols="60">{{ lang|translation:'reportingi1' }}.</textarea>
         <br/>{{ captcha|safe }}
-        <input type="submit" value="{{ lang|translation:52 }}"/>
+        <input type="submit" value="{{ lang|translation:'send' }}"/>
     </form>
 </div>
 
